--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  mongo-auth:
+  mongo:
     image: mongo:7
     ports:
       - "27017:27017"
@@ -10,13 +10,13 @@ services:
     build:
       context: ./services/auth-service
     environment:
-      MONGO_URI_AUTH: mongodb://mongo-auth:27017/auth
+      MONGO_URI_AUTH: mongodb://mongo:27017/auth
       JWT_SECRET: dev-secret
       PORT: "5000"
     ports:
       - "5000:5000"
     depends_on:
-      - mongo-auth
+      - mongo
 
 volumes:
   mongo_data:
