--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,105 @@
+version: "3.9"
+
 services:
-  mongo:
-    image: mongo:7
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports: ["5672:5672","15672:15672"]
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=password
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+
+  mongo-auth:
+    image: mongo:6
+    volumes: ["mongo-auth:/data/db"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  mongo-users:
+    image: mongo:6
+    volumes: ["mongo-users:/data/db"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  mongo-wallets:
+    image: mongo:6
+    volumes: ["mongo-wallets:/data/db"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   auth-service:
-    build:
-      context: ./services/auth-service
+    build: ./services/auth-service
     environment:
-      MONGO_URI_AUTH: mongodb://mongo:27017/auth
-      JWT_SECRET: dev-secret
-      PORT: "5000"
-    ports:
-      - "5000:5000"
+      - PORT=5000
+      - MONGO_URI_AUTH=mongodb://mongo-auth:27017/auth
+      - JWT_SECRET=${JWT_SECRET:-supersecret}
     depends_on:
-      - mongo
+      mongo-auth:
+        condition: service_healthy
+    ports: ["5000:5000"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  user-service:
+    build: ./services/user-service
+    environment:
+      - PORT=5001
+      - MONGO_URI_USERS=mongodb://mongo-users:27017/users
+      - RABBITMQ_URL=amqp://admin:password@rabbitmq:5672
+    depends_on:
+      mongo-users:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    ports: ["5001:5001"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  wallet-service:
+    build: ./services/wallet-service
+    environment:
+      - PORT=5002
+      - MONGO_URI_WALLETS=mongodb://mongo-wallets:27017/wallets
+      - RABBITMQ_URL=amqp://admin:password@rabbitmq:5672
+    depends_on:
+      mongo-wallets:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    ports: ["5002:5002"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
-  mongo_data:
+  mongo-auth:
+  mongo-users:
+  mongo-wallets:
