--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,18 +64,19 @@ services:
   user-service:
     build: ./services/user-service
     environment:
-      - PORT=5001
-      - MONGO_URI_USERS=mongodb://mongo-users:27017/users
+      - PORT=3001
+      - MONGODB_URI=mongodb://mongo-users:27017/user-service
       - RABBITMQ_URL=amqp://admin:password@rabbitmq:5672
+      - NODE_ENV=production
     depends_on:
       mongo-users:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
-    ports: ["5001:5001"]
+    ports: ["3001:3001"]
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3001/graphql"]
       interval: 30s
       timeout: 10s
       retries: 3
