--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,8 +38,6 @@ services:
   mongo-wallets:
     image: mongo:7
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=dev_user
-      - MONGO_INITDB_ROOT_PASSWORD=dev_password
       - MONGO_INITDB_DATABASE=wallets
     volumes:
       - mongo_wallets_data:/data/db
@@ -81,6 +79,48 @@ services:
       retries: 5
 
   # Application services
+  gateway-service:
+    build:
+      context: ./services/gateway-service
+      dockerfile: Dockerfile.dev
+    environment:
+      - NODE_ENV=development
+      - PORT=4000
+      - JWT_SECRET=${JWT_SECRET}
+      - AUTH_SERVICE_URL=http://auth-service:3000/graphql
+      - USER_SERVICE_URL=http://user-service:3001/graphql
+      - WALLET_SERVICE_URL=http://wallet-service:3002/graphql
+      - ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+    volumes:
+      - ./services/gateway-service/src:/app/src:ro
+      - ./shared:/app/shared:ro
+    ports:
+      - "4000:4000"
+    depends_on:
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      wallet-service:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:4000/health",
+          "||",
+          "exit",
+          "1",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   auth-service:
     build:
       context: ./services/auth-service
@@ -90,7 +130,7 @@ services:
       - PORT=3000
       - MONGODB_URI=mongodb://dev_user:dev_password@mongo-auth:27017/auth-service?authSource=admin
       - REDIS_URL=redis://redis:6379
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET=${JWT_SECRET:-supersecret}
       - LOG_LEVEL=debug
     volumes:
       - ./services/auth-service/src:/app/src:ro
@@ -104,7 +144,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/graphql"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -129,6 +169,22 @@ services:
       rabbitmq:
         condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:3001/health",
+          "||",
+          "exit",
+          "1",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   wallet-service:
     build:
@@ -153,6 +209,22 @@ services:
       auth-service:
         condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:3002/health",
+          "||",
+          "exit",
+          "1",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Monitoring & Observability
   prometheus:
