--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,19 +44,43 @@ services:
       timeout: 10s
       retries: 5
 
+  gateway-service:
+    build: ./services/gateway-service
+    environment:
+      - PORT=4000
+      - NODE_ENV=production
+      - JWT_SECRET=${JWT_SECRET:-supersecret}
+      - AUTH_SERVICE_URL=http://auth-service:3000/graphql
+      - USER_SERVICE_URL=http://user-service:3001/graphql
+      - WALLET_SERVICE_URL=http://wallet-service:3002/graphql
+    depends_on:
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      wallet-service:
+        condition: service_healthy
+    ports: ["4000:4000"]
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4000/graphql"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   auth-service:
     build: ./services/auth-service
     environment:
-      - PORT=5000
+      - PORT=3000
       - MONGO_URI_AUTH=mongodb://mongo-auth:27017/auth
       - JWT_SECRET=${JWT_SECRET:-supersecret}
     depends_on:
       mongo-auth:
         condition: service_healthy
-    ports: ["5000:5000"]
+    ports: ["3000:3000"]
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/graphql"]
       interval: 30s
       timeout: 10s
       retries: 3
